Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-29867

GroupBox: broken checkable group box style

    XMLWordPrintable

Details

    • 6300caf01fd79df48c516dd3882028a26b5fe4b4

    Description

      Using the groupbox, setting checkable to true enables a small and big check sign on top of the group box.

      Only a small check box is expected.

      See attached screenshot groupbox.png

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            bachewii Jens
            carochao Caroline Chao (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes